Styling: Change the material ui menu icon color to black. Fix the contrast issue with light background options

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ input {
 
 .material-icons.md-36 { 
   font-size: 36px;
-  color: #ffffff;
+  color: #000000;
 }
 
 .btn {
